Fixed gaps to match desired outcome

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -14,13 +14,13 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
   justify-content: space-between;
-  padding: 5px;
+  padding: 8px;
 }
 
 .one, .two {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 16px;
 }
 
 .profile-image {
@@ -57,5 +57,5 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  gap: 10px;
+  gap: 16px;
 }
